# Agentic-IGA

./: README.md  pyproject.toml  requirements.txt
midpoint_agent/: __init__.py  agent.py  chat_ui.py  example_run.py  pyproject.toml
midpoint_agent/skills/: midpoint.md
midpoint_agent/subagents/: midpoint-admin.agent
midpoint_agent/ui/: package.json
midpoint_agent/ui/app/: globals.css  layout.tsx  page.tsx
midpoint_agent/ui/app/api/chat/: route.ts
midpoint_mcp/: __init__.py  server.py
