[project]
name = "midpoint-agent"
version = "0.1.0"
description = "OpenHands SDK agent for midPoint identity management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openhands-sdk>=0.1.0",
    "openhands-tools>=0.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["midpoint_agent*"]

[tool.openhands]
skills-dir = "skills"